# claude-code-plugin

./: .env.example  README.md  install.sh  pyproject.toml
.github/workflows/: canary.yml  ci.yml  live-channels.yml  live-external-events.yml  live-stack.yml  live-voice.yml  tests.yml
inkbox_claude/: __init__.py  a2a_delegations.py  claude_usage.py  cli.py  config.py  daemon.py  doctor.py  escalation.py  gateway.py  media.py  prompts.py  realtime.py  sessions.py  setup_wizard.py  tools.py
inkbox_claude/webhook_providers/: __init__.py  base.py  github.py
tests/: test_a2a_gateway.py  test_agent_identity_marker.py  test_claude_usage.py  test_config.py  test_daemon.py  test_delivery_failure_retry.py  test_escalation.py  test_gateway_call_config.py  test_gateway_call_ws.py  test_gateway_dedup.py  test_gateway_delivery_failures.py  test_gateway_health.py  test_gateway_inbound_media.py  test_gateway_tunnel_logging.py  test_live_email_intelligence_helper.py  test_live_voice_helpers.py  test_media.py  test_place_call_origination.py  test_prompts.py  test_realtime.py  test_sessions.py  test_setup_wizard.py  test_tools.py  test_webhook_context.py  test_webhook_providers.py  test_webhook_subscriptions.py
tests/contract/: test_host_interface.py
tests/live/: conftest.py  mock_anthropic.py  test_cross_channel.py  test_email_intelligence.py  test_email_reply.py  test_external_event_github.py  test_external_event_intelligence.py  test_sms.py  test_voice.py  voice_driver.py
