[project]
name = "claude-code-plugin"
version = "0.1.3"
description = "Inkbox bridge for Claude Code — talk to your coding agent over email, SMS, iMessage, and voice"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "inkbox>=0.4.20,<1.0.0",
  "claude-agent-sdk>=0.1.0",
  "segno>=1.5",  # terminal QR codes for the iMessage connect step
]

[project.scripts]
inkbox-claude = "inkbox_claude.cli:main"

[tool.setuptools.packages.find]
include = ["inkbox_claude*"]

[tool.setuptools.package-data]
# Ship the bundled Claude Code avatar attached to agents during setup.
inkbox_claude = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
